# Beas_Audio

./: API.md  CMakeLists.txt  IMPLEMENTATION_LOG.md  LICENSE  PROJECT_STATUS.md  SDD.md  SRS.md
build_mingw/: CMakeCache.txt  Makefile  beas_test.lib  cmake_install.cmake  ref_cpu.c  ref_main.cpp  ref_test.c  single_build.cpp  size_check.cpp  test_api.cpp  test_c_api.c  test_hrtf.cpp  test_min3.cpp  test_simple.cpp  test_undef.cpp  test_unres.cpp  test_vec.cpp
build_msvc/: CMakeCache.txt
include/beas/: beas_audio.h
src/: beas_audio.cpp  internal.h
src/dsp/: ambient.cpp  ambient.h  eq.cpp  eq.h  fft.cpp  fft.h  hrtf.cpp  hrtf.h  postprocess.cpp  postprocess.h  sanitize.cpp  sanitize.h  simd.cpp  simd.h
src/hrtf/: sofa_reader.cpp  sofa_reader.h
src/masking/: masking.cpp  masking.h
src/pci/: pci.cpp  pci.h
src/phsm/: phsm.cpp  phsm.h
src/poe/: poe.cpp  poe.h
src/util/: cpu.cpp  cpu.h  flush.cpp  flush.h
tests/: gen_test_sofa.py  test_basic.cpp  test_hrtf.sofa  test_sofa_diag.cpp
